--- a/MediBook.Web/Views/Patient/Index.cshtml
+++ b/MediBook.Web/Views/Patient/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Patient Administration";
 }
 
-@model UsersViewModel
+@model PatientSearchCriteria
 <!--Breadcrumb navigation-->
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
@@ -10,3 +10,16 @@
         <li class="breadcrumb-item active text-white" aria-current="page">Patient Administration</li>
     </ol>
 </nav>
+
+<div class="row mb-4">
+    <div class="col">
+        <a class="btn table-blue-border" asp-controller="Patient" asp-action="Register">
+            <i class="fas fa-plus-circle fa-lg"></i> Register a Patient
+        </a>
+    </div>
+    <div class="col">
+        <a class="btn table-blue-border" asp-controller="Patient" asp-action="Search">
+            <i class="fas fa-search fa-lg"></i> Find a Patient
+        </a>
+    </div>
+</div>
