--- a/MediBook.Web/Views/Shared/_Layout.cshtml
+++ b/MediBook.Web/Views/Shared/_Layout.cshtml
@@ -15,6 +15,18 @@
     @RenderSection("Head", required: false)
 </head>
 <body>
+    @using System.Security.Claims
+
+    @{
+        // extracting the custom user claim here
+        var claimsIdentity = (ClaimsIdentity)User.Identity;
+        var claim = claimsIdentity.Claims.FirstOrDefault(x => string.Compare(x.Type, "Id", StringComparison.InvariantCultureIgnoreCase) == 0);
+        var claimName = claimsIdentity.Claims.FirstOrDefault(x => x.Type == ClaimTypes.Name);
+        // extract user id from claim
+        var id = claim != null ? claim.Value : string.Empty;
+        TempData["userId"] = id;
+        TempData["username"] = claimName != null ? claimName.Value : string.Empty;
+    }
     <header>
         <nav class="navbar navbar-expand-sm navbar-light bg-dark-bl border-bottom box-shadow mb-3">
             <div class="container">
@@ -30,6 +42,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="UserAdmin" asp-action="Index">User Administration</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Patient" asp-action="Index">Patients</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
