--- a/MediBook.Web/Views/_ViewImports.cshtml
+++ b/MediBook.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using MediBook.Web
 @using MediBook.Web.Models
-@using MediBook.Core.DTOs 
+@using MediBook.Core.DTOs
+@using MediBook.Web.Helpers
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
