--- a/MediBook.Web/Views/Patient/SearchResults.cshtml
+++ b/MediBook.Web/Views/Patient/SearchResults.cshtml
@@ -9,7 +9,7 @@
         <li class="breadcrumb-item"><a class="text-white" asp-controller="Home" asp-action="Index">Home</a></li>
         <li class="breadcrumb-item"><a class="text-white" asp-controller="Patient" asp-action="Index">Patient Administration</a></li>
         <li class="breadcrumb-item"><a class="text-white" asp-controller="Patient" asp-action="Search">Search</a></li>
-        <li class="breadcrumb-item active text-white" aria-current="page">Search Results</li>
+        <li class="breadcrumb-item active text-white" aria-current="page">@ViewData["Title"]</li>
     </ol>
 </nav>
 <div class="row mb-4">
