--- a/MediBook.Web/Views/Shared/_Layout.cshtml
+++ b/MediBook.Web/Views/Shared/_Layout.cshtml
@@ -47,7 +47,10 @@
                             <a class="nav-link text-white" asp-area="" asp-controller="Patient" asp-action="Index">Patients</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="AppointmentBook" asp-action="Index">Appointment Book</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Auth" asp-action="Logout">Logout</a>
                         </li>
                     </ul>
                 </div>
