--- a/MediBook.Web/Views/Patient/Details.cshtml
+++ b/MediBook.Web/Views/Patient/Details.cshtml
@@ -8,7 +8,7 @@
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a class="text-white" asp-controller="Home" asp-action="Index">Home</a></li>
         <li class="breadcrumb-item"><a class="text-white" asp-controller="Patient" asp-action="Index">Patient Administration</a></li>
-        <li class="breadcrumb-item active text-white" aria-current="page">Patient Details</li>
+        <li class="breadcrumb-item active text-white" aria-current="page">@ViewData["Title"]</li>
     </ol>
 </nav>
 <div class="container-fluid">
@@ -17,8 +17,8 @@
     <div class="container-fluid">
         <ul class="nav md-pills nav-justified table-blue-border">
             <li class="nav-item"><a class="nav-link" asp-action="BookAppointment" asp-controller="AppointmentBook" asp-route="@Model.Id"><i class="far fa-calendar-plus fa-lg" title="Book Appointment"></i>Book Appointment</a></li>
-            <li class="nav-item"><a class="nav-link" asp-action="PatientAppointments"><i class="far fa-calendar fa-lg" title="Appointments"></i>View Patient Appointments</a></li>
-            <li class="nav-item"><a class="nav-link" asp-action="PatientRecord"><i class="fas fa-file-medical fa-lg" title="Patient Record"></i></a>Access Patient Record</li>
+            <li class="nav-item"><a class="nav-link" asp-action="PatientAppointments" asp-controller="AppointmentBook" asp-route="@Model.Id"><i class="far fa-calendar fa-lg" title="Appointments"></i>View Patient Appointments</a></li>
+            <li class="nav-item"><a class="nav-link" asp-action="Index" asp-controller="PatientRecord" asp-route="@Model.Id"><i class="fas fa-file-medical fa-lg" title="Patient Record"></i></a>Access Patient Record</li>
         </ul>
     </div>
 
