--- a/MediBook.Web/Views/Patient/Search.cshtml
+++ b/MediBook.Web/Views/Patient/Search.cshtml
@@ -8,7 +8,7 @@
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a class="text-white" asp-controller="Home" asp-action="Index">Home</a></li>
         <li class="breadcrumb-item"><a class="text-white" asp-controller="Patient" asp-action="Index">Patient Administration</a></li>
-        <li class="breadcrumb-item active text-white" aria-current="page">Search</li>
+        <li class="breadcrumb-item active text-white" aria-current="page">@ViewData["Title"]</li>
     </ol>
 </nav>
 
