--- a/MediBook.Web/Views/UserAdmin/Index.cshtml
+++ b/MediBook.Web/Views/UserAdmin/Index.cshtml
@@ -7,7 +7,7 @@
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a class="text-white" asp-controller="Home" asp-action="Index">Home</a></li>
-        <li class="breadcrumb-item active text-white" aria-current="page">User Administration</li>
+        <li class="breadcrumb-item active text-white" aria-current="page">@ViewData["Title"]</li>
     </ol>
 </nav>
 
