--- a/MediBook.Web/Views/_ViewImports.cshtml
+++ b/MediBook.Web/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using MediBook.Web.Models
 @using MediBook.Core.DTOs
 @using MediBook.Web.Helpers
+@using MediBook.Core.Enums
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
