Patient Search views working

--- a/MediBook.Web/Views/Patient/Register.cshtml
+++ b/MediBook.Web/Views/Patient/Register.cshtml
@@ -26,7 +26,7 @@
                     <span asp-validation-for="Title" class="text-danger"></span>
                 </div>
                 <div class="md-form">
-                    <label for="FirstName" class="col-form-label">Firstname</label>
+                    <label for="Firstname" class="col-form-label">Firstname</label>
                     <input asp-for="Firstname" class="form-control" id="Firstname" />
                     <span asp-validation-for="Firstname" class="text-danger"></span>
                 </div>
