--- a/MediBook.Web/Views/Patient/Edit.cshtml
+++ b/MediBook.Web/Views/Patient/Edit.cshtml
@@ -85,7 +85,7 @@
                     <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
                 <div class="form-group mt-4">
-                    <input type="submit" value="Register" class="btn btn-green-add" />
+                    <input type="submit" value="Save Changes" class="btn table-blue-border" />
                     <a class="btn btn-grey-cancel" asp-controller="UserAdmin" asp-action="Index">Cancel</a>
                 </div>
             </form>
