Migration added. Patient Notes implemented

--- a/MediBook.Web/Views/Patient/Details.cshtml
+++ b/MediBook.Web/Views/Patient/Details.cshtml
@@ -18,7 +18,7 @@
             <li class="nav-item"><a class="nav-link" asp-action="Edit" asp-controller="Patient" asp-route-id="@Model.Id"><i class="fas fa-user-edit fa-lg rgba-blue-light" title="EditDetails"></i></a>Edit Patient Details</li>
             <li class="nav-item"><a class="nav-link" asp-action="BookAppointment" asp-controller="AppointmentBook" asp-route-id="@Model.Id"><i class="far fa-calendar-plus fa-lg rgba-green-light" title="Book Appointment"></i></a>Book Appointment</li>
             <li class="nav-item"><a class="nav-link" asp-action="PatientAppointments" asp-controller="AppointmentBook" asp-route-id="@Model.Id"><i class="far fa-calendar fa-lg rgba-blue-light" title="Appointments"></i></a>View Patient Appointments</li>
-            <li class="nav-item"><a class="nav-link" asp-action="Index" asp-controller="PatientRecord" asp-route-id="@Model.Id"><i class="fas fa-file-medical fa-lg rgba-red-light" title="Patient Record"></i></a>Access Patient Record</li>
+            <li class="nav-item"><a class="nav-link" asp-action="Index" asp-controller="PatientRecord" asp-route-id="@Model.Id"><i class="fas fa-notes-medical fa-lg rgba-red-light" title="Patient Record"></i></a>Access Patient Record</li>
         </ul>
     </div>
 
