--- a/MediBook.Web/Views/Home/Index.cshtml
+++ b/MediBook.Web/Views/Home/Index.cshtml
@@ -2,7 +2,21 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+@{
+    if (User?.Identity == null || User.Identity.IsAuthenticated)
+    {
+        <div class="text-center">
+            <h1 class="display-4">Welcome to MediBook.Web</h1>
+            <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+        </div>
+    }
+    else
+    {
+        <!-- Redirect to the login page -->
+        @section Head{
+            <meta http-equiv="refresh" content="0; url=Auth/Login" />
+        }
+    }
+}
+
+
